# Aelios

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  DELIVERY-dream-console.md  MIGRATION.md  NOTES-hotpath.md  README.md  SECRETS.md  SPEC-starmap-v2.md  package-lock.json  package.json  push.sh  pyproject.toml  wrangler.toml
.analysis-archive/: 2026-07-07_0000_githubDaily三处小修.md  2026-07-07_1200_实现recall端点.md
data/: active_memory.md  config.example.json  core_profile.md
docs/: spec-perf-cleanup.md  telegram-bot.md
docs/specs/: dedup-gate-dual-resolution.md  extract-prompt-tuning.md  fix-pack.md  restructure.md  review-findings-round1.md  v3-slim-fixes.md  v3-slim.md
integrations/claude-code/: README.md  companion_memory_hook.py  settings.example.json
migrations/: 0003_lmc5_xyzem.sql  0005_review_resolved.sql  0007_lmc5_relations_versioning_perception.sql  0007_tg_bot.sql  0008_weekly_log.sql  0009_monthly_log.sql  0010_messages_hash_unique.sql
saki-gateway/: .gitignore  README.md
saki-gateway/data/: config.example.json
saki-gateway/tests/: test_core_update_proposals.py  test_digest_execution.py  test_memory_rendering.py  test_scheduler_digest.py  (+3 more)
scripts/: backfill-xyzem-memories.mjs  clean-vectorize-memory.mjs  deep-clean-memories.mjs  eval-extract.mjs  import-vectorize-to-d1.mjs  reindex-vectorize.mjs  setup-cloudflare.mjs  smoke-github-daily.mjs  test-claude-cache.mjs  verify-assembler.mjs  verify-cache-strategy.mjs  verify-dedup-gate.mjs  verify-sanitize.mjs  verify-tg-window.mjs  verify-vector-memory-write.mjs
src/: index.ts  types.ts
(+128 files in other folders)
