[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saki-gateway"
version = "0.1.0"
description = "Companion-first AI gateway MVP"
requires-python = ">=3.9"
dependencies = [
	"lark-oapi>=1.5.3",
]

[project.scripts]
saki-gateway = "saki_gateway.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"saki_gateway" = ["static/**/*"]
